[workspace]
resolver = "3"
members = [
    "crates/libp2p-cat-types",
    "crates/libp2p-cat-udp",
]

[workspace.package]
version = "0.1.0"
authors = ["Onyeka Obi <softwareengineerasaservant@isurvivable.cv>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MavenRain/libp2p-cat-rs"
homepage = "https://github.com/MavenRain/libp2p-cat-rs"
readme = "README.md"
keywords = ["p2p", "libp2p", "udp", "rlnc", "category-theory"]
categories = ["network-programming", "rust-patterns"]

[workspace.dependencies]
comp-cat-rs = "0.5"
rlnc-cat-rs = "0.2"
libp2p-cat-types = { path = "crates/libp2p-cat-types", version = "0.1.0" }
libp2p-cat-udp = { path = "crates/libp2p-cat-udp", version = "0.1.0" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "warn"
manual_map = "warn"
