[workspace]
resolver = "3"
members = [
    "crates/libp2p-cat-types",
    "crates/libp2p-cat-udp",
    "crates/libp2p-cat-noise",
    "crates/libp2p-cat-identity",
    "crates/libp2p-cat-pubsub",
    "crates/libp2p-cat-host",
    "crates/libp2p-cat-kad",
    "crates/libp2p-cat-rendezvous",
    "crates/libp2p-cat-mux",
    "crates/libp2p-cat-rpc",
    "crates/libp2p-cat-rs",
    "examples/chat",
    "examples/rendezvous-demo",
]

[workspace.package]
version = "0.2.0"
authors = ["Onyeka Obi <softwareengineerasaservant@isurvivable.cv>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MavenRain/libp2p-cat-rs"
homepage = "https://github.com/MavenRain/libp2p-cat-rs"
readme = "README.md"
keywords = ["p2p", "libp2p", "udp", "rlnc", "category-theory"]
categories = ["network-programming", "rust-patterns"]

[workspace.dependencies]
comp-cat-rs = "0.5"
rlnc-cat-rs = "0.2"
tarpc-cat = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
ed25519-dalek = { version = "2", default-features = false }
getrandom = "0.2"
libp2p-cat-types = { path = "crates/libp2p-cat-types", version = "0.2.0" }
libp2p-cat-udp = { path = "crates/libp2p-cat-udp", version = "0.2.0" }
libp2p-cat-noise = { path = "crates/libp2p-cat-noise", version = "0.2.0" }
libp2p-cat-identity = { path = "crates/libp2p-cat-identity", version = "0.2.0" }
libp2p-cat-pubsub = { path = "crates/libp2p-cat-pubsub", version = "0.2.0" }
libp2p-cat-host = { path = "crates/libp2p-cat-host", version = "0.2.0" }
libp2p-cat-kad = { path = "crates/libp2p-cat-kad", version = "0.2.0" }
libp2p-cat-rendezvous = { path = "crates/libp2p-cat-rendezvous", version = "0.2.0" }
libp2p-cat-mux = { path = "crates/libp2p-cat-mux", version = "0.2.0" }
libp2p-cat-rpc = { path = "crates/libp2p-cat-rpc", version = "0.2.0" }
libp2p-cat-rs = { path = "crates/libp2p-cat-rs", version = "0.2.0" }
proptest = "1"
criterion = { version = "0.5", default-features = false }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "warn"
manual_map = "warn"
