[package]
name = "libp2p-cat-identity"
description = "Ed25519 ↔ X25519 binding via signed-Noise-extension for libp2p-cat-rs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
libp2p-cat-noise = { workspace = true }
libp2p-cat-types = { workspace = true }

[lints]
workspace = true
