[package]
name = "libp2p-cat-kad"
description = "Kademlia DHT routing table and (eventually) RPCs for libp2p-cat-rs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
blake3 = { workspace = true }
comp-cat-rs = { workspace = true }
libp2p-cat-host = { workspace = true }
libp2p-cat-noise = { workspace = true }
libp2p-cat-types = { workspace = true }

[dev-dependencies]
libp2p-cat-identity = { workspace = true }
libp2p-cat-udp = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "routing_table"
harness = false

[lints]
workspace = true
